--- a/src/Components/layouts/navbar/Navbar.css
+++ b/src/Components/layouts/navbar/Navbar.css
@@ -3,8 +3,8 @@
   /* justify-content: space-between; */
   background: #34495e;
   align-items: center;
-  height: 150px;
-  font-family: Arial, Helvetica, sans-serif;
+  height: 120px;
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
 .titulos {
   color: white;
@@ -12,7 +12,7 @@
   justify-items: space-between;
 }
 img {
-  width: 110px;
+  width: 50px;
 }
 h1 {
   color: white;
@@ -31,6 +31,6 @@ h2 {
   /* justify-content: space-between; */
   background: #215e9a;
   align-items: center;
-  height: 150px;
+  height: 120px;
   /* font-family: Arial, Helvetica, sans-serif; */
 }
