--- a/src/Components/layouts/navbar/Navbar.css
+++ b/src/Components/layouts/navbar/Navbar.css
@@ -1,36 +1,3 @@
-.container-navbar {
-  display: flex;
-  /* justify-content: space-between; */
-  background: #34495e;
-  align-items: center;
-  height: 120px;
-  /* font-family: Arial, Helvetica, sans-serif; */
-}
-.titulos {
-  color: white;
-  margin-left: 20px;
-  justify-items: space-between;
-}
-img {
-  width: 50px;
-}
-h1 {
-  color: white;
-  margin-left: 20px;
-  font-size: 200%;
-}
-h2 {
-  justify-items: center;
-  color: white;
-  margin-left: 350px;
-  font-size: 200%;
-}
-
-.container-navbar-dark {
-  display: flex;
-  /* justify-content: space-between; */
-  background: #215e9a;
-  align-items: center;
-  height: 120px;
-  /* font-family: Arial, Helvetica, sans-serif; */
+.navbar-container {
+  height: 20%;
 }
